--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ MONGO_URL='mongodb+srv://shanu:shanu123@cluster0.al1cw.mongodb.net/shanu?retryWr
 
 JWT_SECRET='SeCrEt-K78y'
 
-FRONTEND_URL='http://localhost:5173'
+FRONTEND_URL='https://recipecorner-1.onrender.com'
 
 CLOUDINARY_CLOUD_NAME='ddffexlimn'
 CLOUDINARY_API_KEY='915339992182943'
